--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
-﻿HIVE_SITE.XML_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgres:5432/metastore
-HIVE_SITE.XML_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
-HIVE_SITE.XML_javax_jdo_option_ConnectionUserName=hive
-HIVE_SITE.XML_javax_jdo_option_ConnectionPassword=hive
-HIVE_SITE.XML_datanucleus_autoCreateSchema=false
-HIVE_SITE.XML_hive_metastore_uris=thrift://hive-metastore:9083
-HIVE_SITE.XML_hive_metastore_warehouse_dir=hdfs://namenode:8020/user/hive/warehouse
+﻿# config envs
+# HIVE-SITE.XML_javax.jdo.option.ConnectionURL=jdbc:postgresql://postgres:5432/metastore
+# HIVE-SITE.XML_javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
+# HIVE-SITE.XML_javax.jdo.option.ConnectionUserName=hive
+# HIVE-SITE.XML_javax.jdo.option.ConnectionPassword=hive
+# HIVE-SITE.XML_datanucleus.autoCreateSchema=false
+# HIVE-SITE.XML_hive.metastore.uris=thrift://hive-metastore:9083
 
 CORE-SITE.XML_fs.default.name=hdfs://namenode
 CORE-SITE.XML_fs.defaultFS=hdfs://namenode
