--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,106 +100,146 @@ services:
       timeout: 5s
       retries: 5
 
-  hiveserver2-standalone:
+  metastore:
     user: root
     networks:
       - spark_mts
     image: apache/hive:3.1.3
+    ports:
+      - 9083:9083
     depends_on:
       - postgres
     environment:
-      SERVICE_NAME: hiveserver2
+      SERVICE_NAME: metastore
       DB_DRIVER: postgres
-      HIVE_CUSTOM_CONF_DIR: /hive_custom_conf
+      # HIVE_CUSTOM_CONF_DIR: /hive_custom_conf
       SERVICE_OPTS: >-
         -Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver
         -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://postgres:5432/metastore
         -Djavax.jdo.option.ConnectionUserName=hive
-        -Djavax.jdo.option.ConnectionPassword=hive              
+        -Djavax.jdo.option.ConnectionPassword=hive            
     volumes:
       - /Users/boldyrevn/Downloads/postgresql-42.7.7.jar:/opt/hive/lib/postgres.jar
-      - ./hadoop-config:/hive_custom_conf
 
-  # spark-master:
-  #   image: bde2020/spark-master:3.3.0-hadoop3.3
-  #   container_name: spark-master
-  #   networks:
-  #     - spark_mts
-  #   ports:
-  #     - "8080:8080"
-  #     - "7077:7077"
-  #   environment:
-  #     - INIT_DAEMON_STEP=setup_spark
-  #   env_file:
-  #     - ./config.env
-      
-  # spark-worker-1:
-  #   image: bde2020/spark-worker:3.3.0-hadoop3.3
-  #   container_name: spark-worker-1
-  #   networks:
-  #     - spark_mts
-  #   depends_on:
-  #     - spark-master
-  #   ports:
-  #     - "8081:8081"
-  #   environment:
-  #     - "SPARK_MASTER=spark://spark-master:7077"
-  #     - "SPARK_WORKER_WEBUI_PORT=8081"
-  #   env_file:
-  #     - ./config.env
+  # ---------------------- #
+  # Spark Master
+  # ---------------------- #
+  spark-master:
+    image: apache/spark:3.5.3
+    container_name: spark-master
+    command: >
+      bash -c "
+        /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
+        --host spark-master
+        --port 7077
+        --webui-port 8080
+      "
+    environment:
+      - SPARK_MODE=master
+      - SPARK_LOG_LEVEL=INFO
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=hdfs://namenode:9000/spark-history
+      - SPARK_NO_DAEMONIZE=true
+    ports:
+      - "8080:8080"
+      - "7077:7077"
+    depends_on:
+      - namenode
+      # - hiveserver2-standalone
+    networks:
+      - spark_mts
 
-  # spark-worker-2:
-  #   image: bde2020/spark-worker:3.3.0-hadoop3.3
-  #   container_name: spark-worker-2
-  #   networks:
-  #     - spark_mts
-  #   depends_on:
-  #     - spark-master
-  #   ports:
-  #     - "8082:8082"
-  #   environment:
-  #     - "SPARK_MASTER=spark://spark-master:7077"
-  #     - "SPARK_WORKER_WEBUI_PORT=8082"
-  #   env_file:
-  #     - ./config.env
+  # ---------------------- #
+  # Spark Workers
+  # ---------------------- #
+  spark-worker-1:
+    image: apache/spark:3.5.3
+    container_name: spark-worker-1
+    command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077", "--webui-port", "8081"]
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_LOG_LEVEL=INFO
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=hdfs://namenode:9000/spark-history
+      - SPARK_NO_DAEMONIZE=true
+    depends_on:
+      - spark-master
+    ports:
+      - "8081:8081"
+    networks:
+      - spark_mts
 
-  # spark-history-server:
-  #   image: bde2020/spark-history-server:3.3.0-hadoop3.3
-  #   container_name: spark-history-server
-  #   networks:
-  #     - spark_mts
-  #   depends_on:
-  #     - spark-master
-  #   ports:
-  #     - "18081:18081"
-  #   volumes:
-  #     - spark-events:/tmp/spark-events
-  #   env_file:
-  #     - ./config.env
+  spark-worker-2:
+    image: apache/spark:3.5.3
+    container_name: spark-worker-2
+    command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.worker.Worker", "spark://spark-master:7077", "--webui-port", "8081"]
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_LOG_LEVEL=INFO
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=hdfs://namenode:9000/spark-history
+      - SPARK_NO_DAEMONIZE=true
+    depends_on:
+      - spark-master
+    ports:
+      - "8082:8082"
+    networks:
+      - spark_mts
 
-  # jupyter:
-  #   build:
-  #     context: .
-  #     dockerfile: dockerfile.jupyter
-  #   networks:
-  #     - spark_mts
-  #   hostname: jupyter
-  #   ports:
-  #     - 8888:8888
-  #     - 4040:4040
-  #     - 4041:4041
-  #   environment:
-  #     SPARK_MASTER: spark://spark-master:7077
-  #     HADOOP_CONF_DIR: /etc/hadoop
-  #     HADOOP_USER_NAME: hadoop
-  #   volumes:
-  #     - ./hadoop-config:/etc/hadoop:ro
-  #     - ./notebooks:/home/jovyan/work
-  #   depends_on:
-  #     - spark-master
-  #     - namenode
-  #     - hive-metastore
-  #     - hiveserver2
+
+  # ---------------------- #
+  # Spark History Server
+  # ---------------------- #
+  spark-history-server:
+    image: apache/spark:3.5.3
+    container_name: spark-history
+    command: >
+      bash -c "
+        /opt/spark/sbin/start-history-server.sh &&
+        tail -f /dev/null
+      "
+    environment:
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=hdfs://namenode:9000/spark-history
+      - SPARK_HISTORY_UI_PORT=18080
+      - SPARK_LOG_LEVEL=INFO
+    depends_on:
+      - namenode
+    ports:
+      - "18080:18080"
+    networks:
+      - spark_mts
+
+  # ---------------------- #
+  # Jupyter Notebook
+  # ---------------------- #
+  jupyter:
+    user: root
+    build:
+      context: .
+      dockerfile: dockerfile.jupyter
+    networks:
+      - spark_mts
+    hostname: jupyter
+    ports:
+      - 8888:8888
+      - 4040:4040
+      - 4041:4041
+    environment:
+      SPARK_MASTER: spark://spark-master:7077
+      HADOOP_CONF_DIR: /etc/hadoop
+      HADOOP_USER_NAME: hadoop
+      JAVA_HOME: /usr/lib/jvm/java-8-openjdk-arm64
+    volumes:
+      - ./hadoop-config:/etc/hadoop:ro
+      - ./notebooks:/home/jovyan/work
+    depends_on:
+      - spark-master
+      - namenode
+      # - hiveserver2-standalone
 
 networks:
   spark_mts:
